--- a/doc/intra_paint.lyx
+++ b/doc/intra_paint.lyx
@@ -5,6 +5,8 @@
 \textclass article
 \begin_preamble
 \usepackage{color}
+\usepackage{url}
+\usepackage[pdfpagemode=None,pdfstartview=FitH,pdfview=FitH,colorlinks=true,pdftitle=Perceptual Vector Quantization for Video Coding,pdfauthor=Jean-Marc Valin]{hyperref}
 \end_preamble
 \use_default_options true
 \maintain_unincluded_children false
@@ -93,7 +95,6 @@ Intra paint is a pixel domain technique designed to reconstruct images based
  only on a direction and the pixels that lie on block boundaries.
  Intra paint can be used either for directly encoding images, or as a post-proce
 ssing deringing filter to reduce coding artefacts.
- 
 \end_layout
 
 \begin_layout Section
@@ -335,7 +336,7 @@ where
 :
 \begin_inset Formula 
 \begin{equation}
-\mu_{d,k}=\frac{1}{N_{d,k}}\sum_{p\in P_{d,k}}x_{p}\label{eq:pixel-average}
+\mu_{d,k}=\frac{1}{N_{d,k}}\sum_{p\in P_{d,k}}x_{p}\ ,\label{eq:pixel-average}
 \end{equation}
 
 \end_inset
@@ -589,9 +590,9 @@ reference "fig:Reconstructed-painted-image"
 
 boundary pixels as
 \begin_inset Formula 
-\[
-y_{p}=\sum_{i=1}^{4}w_{p,i,d}\cdot x_{p,i,d}
-\]
+\begin{equation}
+y_{p}=\sum_{i=1}^{4}w_{p,i,d}\cdot x_{p,i,d}\ ,\label{eq:pixel-painting}
+\end{equation}
 
 \end_inset
 
@@ -616,6 +617,9 @@ boundary pixel values used to predict pixel
 \end_inset
 
  are the corresponding weights and sum to one.
+ The weights are computed in such a way as to interpolate between adjacent
+ boundary pixels, while also blending the prediction coming from each end
+ of the prediction line.
  An example is provided in Fig.
 \begin_inset space ~
 \end_inset
@@ -661,7 +665,7 @@ input{interp.pspdftex}}}
 
 \begin_layout Plain Layout
 Interpolation of pixel (2,4) from pixels (-1,2), (-1,3), (7,6), and (7,7).
- Current block shown in gray.
+ The current block shown in gray.
 \begin_inset CommandInset label
 LatexCommand label
 name "fig:Interpolation-of-pixel"
@@ -683,6 +687,37 @@ name "fig:Interpolation-of-pixel"
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+It turns out that the weights used in 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:pixel-painting"
+
+\end_inset
+
+ are exactly the same as those we want to use in Step
+\begin_inset space ~
+\end_inset
+
+3.
+ In other words, for each pixel in the block in Step
+\begin_inset space ~
+\end_inset
+
+3, we use the weights to do the accumulation on the corresponding boundary
+ pixels.
+ This in turn minimizes the distance between the original and the painted
+ image 
+\begin_inset Formula 
+\begin{equation}
+D=\sum_{p}\left(x_{p}-y_{p}\right)^{2}\label{eq:distance}
+\end{equation}
+
+\end_inset
+
+over the entire image.
 \end_layout
 
 \begin_layout Standard
@@ -836,7 +871,7 @@ where
 \begin_inset Formula $\alpha$
 \end_inset
 
- is a per-superblock tunable parameter between 0 and 1.
+ is a tunable parameter between 0 and 1.
  Computing a weight along each line of a diven direction provides more control
  than computing the weight at the block level.
  
@@ -871,13 +906,18 @@ g_{k}^{*}=\frac{Q^{2}}{12\sigma_{k}^{2}}\label{eq:partial-gain}
 
 \end_inset
 
- on each boundary pixel.
+on each boundary pixel.
  From there, we can treat the 
 \begin_inset Formula $g_{k}^{*}$
 \end_inset
 
- values in the same way as pixels and  apply the paint algorithm in Step
- 4 to obtain a smooth gain across block boundaries.
+ values in the same way as pixels and apply the paint algorithm in Step
+ 4 to fill the 
+\begin_inset Formula $g_{k}^{*}$
+\end_inset
+
+ values that are inside the blocks.
+ This provides us with a continuously-varying gain across the image.
  The final gain then becomes 
 \begin_inset Formula 
 \begin{equation}
@@ -901,11 +941,31 @@ where the
 
  value that minimizes a certain cost metric (e.g.
  PSNR).
+ To reduce the signaling overhead, 
+\begin_inset Formula $\alpha$
+\end_inset
+
+ is typically signaled over a larger block size than the painting itself.
+ For example, good results were obtained when signaling 
+\begin_inset Formula $\alpha$
+\end_inset
+
+ only on 32x32 superblocks.
  
 \end_layout
 
 \begin_layout Subsection
 Simplifications
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset label
+LatexCommand label
+name "sub:Simplifications"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -917,7 +977,7 @@ In some applications, applying the algorithm as described above may require
  Although this may increase boundary effects around blocks, it may still
  be acceptable for deringing purposes.
  Alternatively, the painting may be performed on overlapping blocks, which
- would reduce blocking artefacts at the cost or higher complexity.
+ would reduce blocking artefacts at the cost of higher complexity.
  
 \end_layout
 
@@ -927,7 +987,56 @@ It is also possible to reduce the complexity of the filter gain computation
 \begin_inset Formula $g$
 \end_inset
 
- on a block-by-block basis, rather than on a line-by-line basis.
+ on a block-by-block basis.
+\end_layout
+
+\begin_layout Section
+Implementation
+\end_layout
+
+\begin_layout Standard
+A deringing filter based on the intra paint algorithm has been implemented
+ for the Daala
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Daala"
+
+\end_inset
+
+ codec.
+ It is available from the Daala Git repository
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Daala-Git"
+
+\end_inset
+
+, in the 
+\family typewriter
+exp_paint_deringing4
+\family default
+ branch.
+ To maximize the resulting quality, the implementation does not include
+ the simplifications described in Section
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sub:Simplifications"
+
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Section
@@ -938,9 +1047,141 @@ Conclusion
 We have demonstrated an effective algorithm to remove ringing artefacts
  from coded images and videos.
  While this algorithm does not significantly improve objective quality metrics
- we have been using on Daala (PSNR, PSNR-HVS, SSIM, FAST-SSIM), the improvement
- in subjective quality is significant, mostly on edges.
+ we have been using on Daala (PSNR, PSNR-HVS, SSIM, FAST-SSIM
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Testing-draft"
+
+\end_inset
+
+), the improvement in subjective quality is significant, mostly on edges.
+ See this technilogy demo
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Paint-demo"
+
+\end_inset
+
+ for more information.
  
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Daala"
+
+\end_inset
+
+Daala website, Xiph.Org Foundation.
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+url{http://xiph.org/daala/}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Daala-Git"
+
+\end_inset
+
+Daala Git repository.
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+url{http://git.xiph.org/?p=daala.git;a=summary}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Testing-draft"
+
+\end_inset
+
+T.
+ Daede, J.
+ Moffitt, 
+\emph on
+Video Codec Testing and Quality Measurement
+\emph default
+, IETF Internet draft, 2015.
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+url{https://tools.ietf.org/html/draft-daede-netvc-testing}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+key "Paint-demo"
+
+\end_inset
+
+
+J.-M.
+ Valin, 
+\emph on
+Daala: Painting Images for Fun (and Profit?)
+\emph default
+.
+ 
+\lang english
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+url{http://people.xiph.org/~jm/daala/paint_demo/}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_body
