--- a/doc/dir_dering.lyx
+++ b/doc/dir_dering.lyx
@@ -6,7 +6,7 @@
 \begin_preamble
 \usepackage{color}
 \usepackage{url}
-\usepackage[pdfpagemode=None,pdfstartview=FitH,pdfview=FitH,colorlinks=true,pdftitle=Perceptual Vector Quantization for Video Coding,pdfauthor=Jean-Marc Valin]{hyperref}
+\usepackage[pdfpagemode=None,pdfstartview=FitH,pdfview=FitH,colorlinks=true,pdftitle=Directional Deringing Filter,pdfauthor=Jean-Marc Valin]{hyperref}
 \end_preamble
 \use_default_options true
 \maintain_unincluded_children false
@@ -90,6 +90,15 @@ Jean-Marc Valin
 Introduction
 \end_layout
 
+\begin_layout Standard
+This document describes a deringing filter that takes into account the direction
+ of edges and patterns being filtered.
+ The filter works by identifying the direction of each block and then adaptively
+ filtering along the identified direction.
+ In a second pass, the blocks are also filtered in a different direction,
+ with a more conservative thresholds to avoid blurring edges.
+\end_layout
+
 \begin_layout Section
 Direction Search
 \end_layout
@@ -98,7 +107,7 @@ Direction Search
 The first step is to divide the image into blocks of fixed or variable size.
  Variable-size blocks make it possible to use large blocks on long, continuous
  edges and small blocks where edges intersect or change direction.
- Fixed block size is easier to implement and does not require signalling
+ Fixed block size is easier to implement and does not require signaling
  the sizes on a block-by-block basis.
  For this work, we consider a fixed block size of 8x8.
 \end_layout
@@ -269,7 +278,10 @@ reference "eq:direction-variance0"
 \end_inset
 
 Considering that the first term of Eq.
- 
+\begin_inset space ~
+\end_inset
+
+
 \begin_inset CommandInset ref
 LatexCommand eqref
 reference "eq:direction-variance1"
@@ -287,7 +299,15 @@ reference "eq:direction-variance1"
  as:
 \begin_inset Formula 
 \begin{equation}
-d_{opt}=\max_{d}\sum_{k\in\mathrm{block},d}\frac{1}{N_{d,k}}\left(\sum_{p\in P_{d,k}}x_{p}\right)^{2}\,.\label{eq:direction-variance2}
+d_{opt}=\max_{d}s_{d}\,,\label{eq:direction-variance2}
+\end{equation}
+
+\end_inset
+
+where 
+\begin_inset Formula 
+\begin{equation}
+s_{d}=\sum_{k\in\mathrm{block},d}\frac{1}{N_{d,k}}\left(\sum_{p\in P_{d,k}}x_{p}\right)^{2}\ .\label{eq:direction-variance3}
 \end{equation}
 
 \end_inset
@@ -737,7 +757,7 @@ Orthogonal Direction Filter
 
 \begin_layout Standard
 The 7-tap directional filter is sometimes not enough to eliminate all ringing,
- so we use an additional filtering step in the direction orthgonal to that
+ so we use an additional filtering step in the direction orthogonal to that
  used in the first filter.
  Considering that the input of the second filter has considerably less ringing
  than the input of the second filter, and the fact that the second filter
@@ -762,7 +782,27 @@ reference "eq:directional_filter"
 \end_inset
 
 .
- 
+ The direction parameters for the orthogonal filter are shown in Table
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "tab:Ortho-parameters"
+
+\end_inset
+
+ and the filter weights are 
+\begin_inset Formula $\mathbf{w}=\left[\begin{array}{cc}
+1 & 1\end{array}\right]$
+\end_inset
+
+ with 
+\begin_inset Formula $W=16/3$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Standard
@@ -1129,18 +1169,84 @@ roughly
 \end_inset
 
 .
- We use a power model of the form
+ As a starting point for determining the thresholds, we use a power model
+ of the form
 \begin_inset Formula 
 \begin{equation}
-T_{d}=\alpha Q^{\beta}\ .\label{eq:setting-Td}
+T_{0}=\alpha_{1}Q^{\beta}\ ,\label{eq:setting-Td}
 \end{equation}
 
 \end_inset
 
-For the second filter, we use
+with 
+\begin_inset Formula $\beta=0.842$
+\end_inset
+
+ in Daala, and where 
+\begin_inset Formula $\alpha_{1}$
+\end_inset
+
+ depends on the input scaling.
+ 
+\end_layout
+
+\begin_layout Standard
+Another factor that affects the optimal filtering threshold is the presence
+ of strong directional edges/patterns.
+ These can be estimated from the 
+\begin_inset Formula $s_{d}$
+\end_inset
+
+ parameters computed in Eq.
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "eq:direction-variance3"
+
+\end_inset
+
+ as
 \begin_inset Formula 
 \begin{equation}
-T_{2}\left(i,j\right)=\min\left(T_{d},\left|y\left(i,j\right)-x\left(i,j\right)\right|\right)\ .\label{eq:setting-T2}
+\delta=s_{d_{opt}}-s_{d_{ortho}}\ ,\label{eq:variande-delta}
+\end{equation}
+
+\end_inset
+
+where 
+\begin_inset Formula $d_{ortho}=d_{opt}+4\ \left(\mathrm{mod}\,8\right)$
+\end_inset
+
+.
+ We compute the direction filtering threshold for each block as 
+\begin_inset Formula 
+\[
+T_{d}=T_{0}\cdot\max\left(\frac{1}{2},\min\left(3,\alpha_{2}\left(\delta\cdot\delta_{sb}\right)^{1/6}\right)\right)\ ,
+\]
+
+\end_inset
+
+where 
+\begin_inset Formula $\delta_{sb}$
+\end_inset
+
+ is the average of the 
+\begin_inset Formula $\delta$
+\end_inset
+
+ values over the entire superblock and 
+\begin_inset Formula $\alpha_{2}$
+\end_inset
+
+ also depends on the input scaling.
+ For the second filter, we use a more conservative threshold that depends
+ on the amount of change caused by the directional filter.
+\begin_inset Formula 
+\begin{equation}
+T_{2}\left(i,j\right)=\min\left(T_{d},\frac{T_{d}}{3}+\left|y\left(i,j\right)-x\left(i,j\right)\right|\right)\ .\label{eq:setting-T2}
 \end{equation}
 
 \end_inset
@@ -1148,8 +1254,54 @@ T_{2}\left(i,j\right)=\min\left(T_{d},\left|y\left(i,j\right)-x\left(i,j\right)\
 
 \end_layout
 
+\begin_layout Standard
+As a special case, when the pixels corresponding to the 8x8 block being
+ filtered are all skipped, then 
+\begin_inset Formula $T_{d}=T_{2}=0$
+\end_inset
+
+, so no deringing is performed.
+ 
+\end_layout
+
 \begin_layout Section
-Superblock Boundaries
+Superblock Filtering
+\end_layout
+
+\begin_layout Standard
+The filtering is applied one superblock at a time, conditional on a flag
+ coded in the bit-stream.
+ This binary flag is the only information coded in the bitstream by the
+ deringing filter.
+ The flag is only coded for superblocks that are not skipped and it is entropy-c
+oded based on the neighbour values.
+ 
+\end_layout
+
+\begin_layout Standard
+The deringing process sometimes uses as input pixels that lie outside of
+ the superblock being processed.
+ When these pixels belong to another superblock, the filtering always uses
+ the unfiltered pixel values -- even for the orthogonal direction filter
+ step -- so that no dependency is added between the superblocks.
+ This makes it possible -- in theory -- to filter all superblocks in parallel.
+ When the pixels used for a filter lie outside of the viewable image, we
+ set 
+\begin_inset Formula $f\left(d,T\right)=0$
+\end_inset
+
+ in Eq.
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "eq:threshold-function"
+
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Section
@@ -1181,6 +1333,49 @@ key "Daala-Git"
 \end_inset
 
 .
+ We tested the deringing filter on the Are We Compressed Yet
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "AWCY"
+
+\end_inset
+
+ ntt-short1 set over the 0.025
+\begin_inset space ~
+\end_inset
+
+bit/pixel to 0.1
+\begin_inset space ~
+\end_inset
+
+bit/pixel range, corresponding to a 1080p30 bitrate of 1.5
+\begin_inset space ~
+\end_inset
+
+Mbit/s to 6
+\begin_inset space ~
+\end_inset
+
+Mbit/s.
+ The Bjøntegaard-delta
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "Testing-draft"
+
+\end_inset
+
+ rate reduction over that range was 6.5% for PSNR, 4.7% for PSNR-HVS, 5.6%
+ for SSIM and -6.0% (regression) for FAST-SSIM.
+ Visual inspection confirmed that the quality is indeed improved, despite
+ the regression in FAST-SSIM result.
  
 \end_layout
 
@@ -1191,6 +1386,9 @@ Conclusion
 \begin_layout Standard
 We have demonstrated an effective algorithm to remove ringing artefacts
  from coded images and videos.
+ The proposed filter takes into account the directionality of the patterns
+ it is filtering to reduce the risk of blurring.
+ 
 \end_layout
 
 \begin_layout Bibliography
@@ -1244,6 +1442,32 @@ url{http://git.xiph.org/?p=daala.git;a=summary}
 \begin_layout Bibliography
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
+label "3"
+key "AWCY"
+
+\end_inset
+
+Are We Compressed Yet.
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+url{https://arewecompressedyet.com/}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Bibliography
+\begin_inset CommandInset bibitem
+LatexCommand bibitem
+label "4"
 key "Testing-draft"
 
 \end_inset
